@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Mention App::Pocoirc in the SYNOPSIS
 
 0.12  Mon Sep 6 04:17:07 GMT 2010
     - Make the 'Channels' parameter actually do what it's supposed to
